更新方案by兔巴哥

--- a/WorldOfTheThreeKingdoms.Desktop/WorldOfTheThreeKingdoms.Desktop.csproj
+++ b/WorldOfTheThreeKingdoms.Desktop/WorldOfTheThreeKingdoms.Desktop.csproj
@@ -4315,6 +4315,90 @@
       <Link>Content\Data\yearTableStrings.txt</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="..\Content\Data\Common\CommonData.json">
+      <Link>Content\Data\Common\CommonData.json</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Content\Data\Scenario\0XSSL5.json">
+      <Link>Content\Data\Scenario\0XSSL5.json</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Content\Data\Scenario\184DHZS.json">
+      <Link>Content\Data\Scenario\184DHZS.json</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Content\Data\Scenario\190FDLM.json">
+      <Link>Content\Data\Scenario\190FDLM.json</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Content\Data\Scenario\192XDZX1.json">
+      <Link>Content\Data\Scenario\192XDZX1.json</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Content\Data\Scenario\194QXGJ1.json">
+      <Link>Content\Data\Scenario\194QXGJ1.json</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Content\Data\Scenario\194QXGJ2.json">
+      <Link>Content\Data\Scenario\194QXGJ2.json</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Content\Data\Scenario\197YSCD.json">
+      <Link>Content\Data\Scenario\197YSCD.json</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Content\Data\Scenario\200GDZZ.json">
+      <Link>Content\Data\Scenario\200GDZZ.json</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Content\Data\Scenario\207SGML.json">
+      <Link>Content\Data\Scenario\207SGML.json</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Content\Data\Scenario\208CBZZ.json">
+      <Link>Content\Data\Scenario\208CBZZ.json</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Content\Data\Scenario\211LBRS.json">
+      <Link>Content\Data\Scenario\211LBRS.json</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Content\Data\Scenario\217HZZZ.json">
+      <Link>Content\Data\Scenario\217HZZZ.json</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Content\Data\Scenario\219SFTX.json">
+      <Link>Content\Data\Scenario\219SFTX.json</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Content\Data\Scenario\227WHBF.json">
+      <Link>Content\Data\Scenario\227WHBF.json</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Content\Data\Scenario\251MSZZ.json">
+      <Link>Content\Data\Scenario\251MSZZ.json</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Content\Data\Scenario\263SHWJ.json">
+      <Link>Content\Data\Scenario\263SHWJ.json</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Content\Data\Scenario\280JGZZ.json">
+      <Link>Content\Data\Scenario\280JGZZ.json</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Content\Data\Scenario\280LWSG.json">
+      <Link>Content\Data\Scenario\280LWSG.json</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Content\Data\Scenario\280MJZZ.json">
+      <Link>Content\Data\Scenario\280MJZZ.json</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Content\Data\Scenario\280YXJJ.json">
+      <Link>Content\Data\Scenario\280YXJJ.json</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="..\References\Desktop\x64\SDL2.dll">
       <Link>x64\SDL2.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -4366,10 +4450,6 @@
       <Link>Content\Data\ChineseCodes.txt</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\Content\Data\CommonZip\CommonData.json">
-      <Link>Content\Data\Common\CommonData.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="..\Content\Data\femalefaceA.txt">
       <Link>Content\Data\femalefaceA.txt</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -4404,98 +4484,6 @@
     </Content>
     <Content Include="..\Content\Data\malegivenname.txt">
       <Link>Content\Data\malegivenname.txt</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Data\ScenarioZip\0XSSL5.json">
-      <Link>Content\Data\Scenario\0XSSL5.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Data\ScenarioZip\184DHZS.json">
-      <Link>Content\Data\Scenario\184DHZS.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Data\ScenarioZip\190FDLM.json">
-      <Link>Content\Data\Scenario\190FDLM.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Data\ScenarioZip\192XDZX1.json">
-      <Link>Content\Data\Scenario\192XDZX1.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Data\ScenarioZip\194QXGJ1.json">
-      <Link>Content\Data\Scenario\194QXGJ1.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Data\ScenarioZip\194QXGJ2.json">
-      <Link>Content\Data\Scenario\194QXGJ2.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Data\ScenarioZip\197YSCD.json">
-      <Link>Content\Data\Scenario\197YSCD.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Data\ScenarioZip\200GDZZ.json">
-      <Link>Content\Data\Scenario\200GDZZ.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Data\ScenarioZip\207SGML.json">
-      <Link>Content\Data\Scenario\207SGML.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Data\ScenarioZip\208CBZZ.json">
-      <Link>Content\Data\Scenario\208CBZZ.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Data\ScenarioZip\211LBRS.json">
-      <Link>Content\Data\Scenario\211LBRS.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Data\ScenarioZip\217HZZZ.json">
-      <Link>Content\Data\Scenario\217HZZZ.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Data\ScenarioZip\219SFTX.json">
-      <Link>Content\Data\Scenario\219SFTX.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Data\ScenarioZip\227WHBF.json">
-      <Link>Content\Data\Scenario\227WHBF.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Data\ScenarioZip\251MSZZ.json">
-      <Link>Content\Data\Scenario\251MSZZ.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Data\ScenarioZip\263SHWJ.json">
-      <Link>Content\Data\Scenario\263SHWJ.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Data\ScenarioZip\280JGZZ.json">
-      <Link>Content\Data\Scenario\280JGZZ.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Data\ScenarioZip\280LWSG.json">
-      <Link>Content\Data\Scenario\280LWSG.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Data\ScenarioZip\280MJZZ.json">
-      <Link>Content\Data\Scenario\280MJZZ.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Data\ScenarioZip\280YXJJ.json">
-      <Link>Content\Data\Scenario\280YXJJ.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Data\ScenarioZip\40WJQXGJ213.json">
-      <Link>Content\Data\Scenario\40WJQXGJ213.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Data\ScenarioZip\40WJQXGJ313.json">
-      <Link>Content\Data\Scenario\40WJQXGJ313.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\Content\Data\ScenarioZip\40WJQXGJ7.json">
-      <Link>Content\Data\Scenario\40WJQXGJ7.json</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="..\Content\bin\Desktop\Font\FontE.xnb">
@@ -60126,8 +60114,6 @@
     <Folder Include="Content\Sound\Troop\801\" />
     <Folder Include="Content\Textures\GameComponents\PersonPortrait\Images\Player\" />
     <Folder Include="Platforms\GZip\" />
-    <Folder Include="x64\" />
-    <Folder Include="x86\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\Content\Data\Plugins\AirViewData.xml">
