編輯器新增更新子女配偶關係

--- a/WorldOfTheThreeKingdomsEditor/WorldOfTheThreeKingdomsEditor.csproj
+++ b/WorldOfTheThreeKingdomsEditor/WorldOfTheThreeKingdomsEditor.csproj
@@ -63,13 +63,14 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="DictionaryTab.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Person.cs" />
+    <Compile Include="PersonTab.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
