--- a/WorldOfTheThreeKingdomsEditor/WorldOfTheThreeKingdomsEditor.csproj
+++ b/WorldOfTheThreeKingdomsEditor/WorldOfTheThreeKingdomsEditor.csproj
@@ -63,6 +63,12 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="TreasureTab.cs" />
+    <Compile Include="TroopEventTab.cs" />
+    <Compile Include="EventTab.cs" />
+    <Compile Include="CaptiveTab.cs" />
+    <Compile Include="TroopTab.cs" />
+    <Compile Include="MilitaryTab.cs" />
     <Compile Include="FactionTab.cs" />
     <Compile Include="ArchitectureTab.cs" />
     <Compile Include="BaseTab.cs" />
