--- a/WorldOfTheThreeKingdomsEditor/WorldOfTheThreeKingdomsEditor.csproj
+++ b/WorldOfTheThreeKingdomsEditor/WorldOfTheThreeKingdomsEditor.csproj
@@ -63,6 +63,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="TitleTab.cs" />
     <Compile Include="FacilityTab.cs" />
     <Compile Include="TreasureTab.cs" />
     <Compile Include="TroopEventTab.cs" />
