編輯器新增事件類、設施類修改

--- a/WorldOfTheThreeKingdomsEditor/WorldOfTheThreeKingdomsEditor.csproj
+++ b/WorldOfTheThreeKingdomsEditor/WorldOfTheThreeKingdomsEditor.csproj
@@ -63,6 +63,11 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="TroopEventEffectKindTab.cs" />
+    <Compile Include="EventEffectKindTab.cs" />
+    <Compile Include="TroopEventEffectTab.cs" />
+    <Compile Include="EventEffectTab.cs" />
+    <Compile Include="FacilityKindTab.cs" />
     <Compile Include="ConditionKindTab.cs" />
     <Compile Include="InfluenceKindTab.cs" />
     <Compile Include="ConditionTab.cs" />
