--- a/WorldOfTheThreeKingdoms/WorldOfTheThreeKingdoms.csproj
+++ b/WorldOfTheThreeKingdoms/WorldOfTheThreeKingdoms.csproj
@@ -57424,7 +57424,9 @@
     </Content>
     <None Include="app.config" />
     <None Include="app.manifest" />
-    <None Include="Content\Data\Scenario\194QXGJ.json" />
+    <Content Include="Content\Data\Scenario\194QXGJ.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="Content\Data\xlsTemplate.xlsx" />
   </ItemGroup>
   <ItemGroup>
