--- a/WorldOfTheThreeKingdomsEditor/WorldOfTheThreeKingdomsEditor.csproj
+++ b/WorldOfTheThreeKingdomsEditor/WorldOfTheThreeKingdomsEditor.csproj
@@ -90,6 +90,9 @@
     </Compile>
     <Compile Include="ArchitectureKindTab.cs" />
     <Compile Include="MilitaryKindTab.cs" />
+    <Compile Include="NewFactionWindow.xaml.cs">
+      <DependentUpon>NewFactionWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="TroopEventEffectKindTab.cs" />
     <Compile Include="EventEffectKindTab.cs" />
     <Compile Include="TroopEventEffectTab.cs" />
@@ -118,6 +121,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="NewFactionWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PersonTab.cs" />
